Fix the username button icon not aligned

--- a/customize.dist/src/less/toolbar.less
+++ b/customize.dist/src/less/toolbar.less
@@ -41,6 +41,7 @@
         width: 16px;
         display: inline-block;
         padding: 5px;
+        margin: 3px 0;
         div {
             margin: auto;
         }
@@ -240,6 +241,9 @@
         span:not(.cryptpad-lag) {
             vertical-align: top;
             display: inline-block;
+        }
+        span.fa {
+            vertical-align: baseline;
         }
         @media screen and (max-width: @media-narrow-screen) {
             top: 3em;
